<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/cont1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/cont3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:background="@drawable/style_of_btn_1_and_2"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:textStyle="bold"/>
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                >

                <LinearLayout
                    android:id="@+id/cont4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:id="@+id/cont5_line1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="60dp"
                            android:background="@drawable/btn_2_none_and_start"
                            android:gravity="center"
                            android:text="@string/literature"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_2_none_and_start"
                            android:gravity="center"
                            android:text="@string/music"
                            android:textStyle="italic" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cont6_line2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
                            android:layout_marginRight="60dp"
                            android:background="@drawable/btn_2_none_and_start"
                            android:gravity="center"
                            android:text="@string/art"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_2_none_and_start"
                            android:gravity="center"
                            android:text="@string/astronomy"
                            android:textStyle="italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/cont7_line3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="60dp"
                            android:background="@drawable/btn_2_none_and_start"
                            android:gravity="center"
                            android:text="@string/math"
                            android:textStyle="italic" />
                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:layout_marginRight="10dp"
                            android:background="@drawable/btn_2_none_and_start"
                            android:gravity="center"
                            android:text="@string/botany"
                            android:textStyle="italic" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>