<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/cont1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/cont2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:id="@+id/hat1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button2_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/style_of_btn_1_and_2"
                    android:text="@string/btn_back"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/lvl_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lvl"
                    android:textAllCaps="false"
                    android:padding="10dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/cont_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/txt_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="text text"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line1_answer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="10dp">

                <Button
                    android:id="@+id/ans1"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:text="Text 1"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/answer_none_and_start"
                    android:gravity="center"
                    android:textStyle="italic"/>
                <Button
                    android:id="@+id/ans2"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Text 2"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/answer_none_and_start"
                    android:gravity="center"
                    android:textStyle="italic"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/line2_answer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/ans3"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Text 3"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/answer_none_and_start"
                    android:gravity="center"
                    android:textStyle="italic"/>
                <Button
                    android:id="@+id/ans4"
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Text 4"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:layout_marginRight="40dp"
                    android:background="@drawable/answer_none_and_start"
                    android:gravity="center"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_confirm"
                    android:layout_marginRight="120dp"
                    android:layout_marginLeft="120dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:background="@drawable/style_of_btn_1_and_2"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>